Revision history for Dist-Zilla-Plugin-GitHub

{{$NEXT}}

0.40      2015-01-08 15:00:01-08:00 America/Vancouver

 - fix error in JSON conversion in 0.39 that caused all requests to fail
   (thanks, Dave Rolsky!)

0.39      2014-12-30 19:44:24+01:00 Europe/Rome

 - Check for _check_response() return value before using it
 - Switch from JSON.pm to JSON::MaybeXS (GH#44) (thanks, @karenetheridge!)

0.38      2014-06-28 12:38:24+02:00 Europe/Rome

 - Support using tokens with HTTP Basic Auth (GH#36) (thanks, @RsrchBoy!)
 - Support 2-factor authentication (GH#38) (GH#39) (thanks, @friedo!)
 - Fix password prompt
 - Support for creating repos within an organization (GH#40) (thanks, @friedo!)

0.36      2013-12-03 19:25:55 Europe/Rome

 - Require Net::SSLeay for HTTP::Tiny SSL support and check HTTP::Tiny
   exceptions (GH#33) (thanks, @chorny!)

0.35      2013-07-27 14:58:49 Europe/Rome

 - Change phase for [Github::Update] from Releaser to AfterRelease (GH#27)
   (thanks, @karenetheridge!)
 - Add options to enable/disable issues, wiki and downloads when creating a
   new repository (GH#29)

0.34      2013-05-03 22:17:26 Europe/Rome

 - Fix if/elsif in gh command (GH#26) (thanks, @karenetheridge!)

0.33      2013-05-03 20:17:46 Europe/Rome

 - Do not use given when anymore to avoid new experimental::smartmatch
   warnings (GH#22)

0.32      2013-03-24 23:50:12 Europe/Rome

 - Support custom provider and profile in the "dzil gh create"

0.31      2013-03-06 15:54:19 Europe/Rome

 - Silence warnings in Create when the repository has no commits (GH#19)
   (thanks, @rkitover!)
 - Improve repository name extraction from remote URL (GH#21)
   (thanks, @doherty!)

0.30      2013-01-13 16:29:12 Europe/Rome

 - Meta and Update now try to extract the GitHub repository name from the URL
   of the remote pointing to the repository
 - Set the remote tracking for the current branch to the GitHub remote on
   create (GH#17) (thanks, @rkitover!)